<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.cyanogenmod.settings.device"
    android:title="@string/app_name">

    <!-- Fastcharge -->
    <PreferenceCategory android:key="category_general"
        android:title="@string/category_general_title">
        <CheckBoxPreference
            android:key="fast_charge"
            android:title="@string/fast_charge_title"
            android:summary="@string/fast_charge_summary"
            android:defaultValue="false" />
			
	<!-- Memory-Increasing -->		
        <CheckBoxPreference
            android:key="int2ext"
            android:title="@string/int2ext_title"
            android:summary="@string/int2ext_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
	
	<!-- Performance -->
    <PreferenceCategory android:title="@string/category_performance_title" >
        <CheckBoxPreference
            android:key="low_ram"
            android:title="@string/low_ram_title"
            android:summaryOn="@string/low_ram_summary_on"
            android:summaryOff="@string/low_ram_summary_off"
            android:defaultValue="true" />
    </PreferenceCategory>

    <!-- Sweep2Wake -->
    <PreferenceCategory android:key="category_sweep2wake"
        android:title="@string/category_sweep2wake_title">
        <SwitchPreference
            android:key="sweep2wake"
            android:title="@string/sweep2wake_title"
            android:summaryOn="@string/sweep2wake_summaryOn"
            android:summaryOff="@string/sweep2wake_summaryOff"
            android:defaultValue="false" />
    </PreferenceCategory>

    <!-- Doubletap2Wake -->
    <PreferenceCategory android:key="category_doubletap2wake"
        android:title="@string/category_doubletap2wake_title">
        <SwitchPreference
            android:key="doubletap2wake"
            android:title="@string/doubletap2wake_title"
            android:summaryOn="@string/doubletap2wake_summaryOn"
            android:summaryOff="@string/doubletap2wake_summaryOff"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
